--- a/views/form.erb
+++ b/views/form.erb
@@ -1,6 +1,7 @@
-<h3>Here's the form</h3>
+<h3>What's your name?</h3>
 
-<form action='/myaction' method='post'>
+<form action='/' method='post'>
   <input type='text' name='username'/>
+  <br />
   <input type="submit" class="btn"/>
 </form>
