--- a/views/game.erb
+++ b/views/game.erb
@@ -15,8 +15,8 @@ Welcome <%= session[:username] %>
       <p>
         <h5>Dealer has <%= calculate_total(session[:dealer])%> and will hit.</h5>
           <form action='game/dealer/hit' method='post'>
-          <input type='submit' class='btn btn-primary' value='Click to see dealer card &rarr;'>>
-           </form>
+            <input type='submit' class='btn btn-primary' value='Click to see dealer card'/>
+          </form>
       </p>
     <% end %>
 </div>
