--- a/views/game.erb
+++ b/views/game.erb
@@ -5,16 +5,28 @@ Welcome <%= session[:username] %>
 <br />
 <br />
 
+<% if @play_again %>
+<p>
+  <strong>Play Again?</strong>
+  <a href="/game" class="btn btn-primary">Yes</a>
+  <a href="/game_over" class="btn">No</a>
+</p>
+<% end %>
+
 <div class="well">
   <h4>Dealer's cards:</h4>
-    <% session[:dealer_cards].each do |card| %>
-      <%= card_image(card) %>
+    <% session[:dealer_cards].each_with_index do |card, index| %>
+      <% if session[:turn] != "dealer" && index == 0 %>
+        <img src="/images/cards/cover.jpg" class="card_image">
+      <% else %>
+        <%= card_image(card) %>
+      <% end %>
     <% end %>
 
     <% if @show_dealer_hit_button %>
       <p>
-        <h5>Dealer has <%= calculate_total(session[:dealer])%> and will hit.</h5>
-          <form action='game/dealer/hit' method='post'>
+        <h5>Dealer has <%= calculate_total(session[:dealer_cards])%> and will hit.</h5>
+          <form action='/game/dealer/hit' method='post'>
             <input type='submit' class='btn btn-primary' value='Click to see dealer card'/>
           </form>
       </p>
@@ -31,7 +43,7 @@ Welcome <%= session[:username] %>
 </div>
 
 <p>
-  What would you like to do? <%= session[:username] %> has <%= calculate_total(session[:player_cards]) %>
+  <%= session[:username] %> has a count of <%= calculate_total(session[:player_cards]) %>
 </p>
 
 <% if @show_hit_or_stay_buttons %>
