--- a/views/game_over.erb
+++ b/views/game_over.erb
@@ -1,3 +1,5 @@
-<h1>Thanks for playing, see you next time!</h1>
+<h1>Congrats, you've amassed a total of $<%=session[:player_pot] %></h1>
+
+<h2>Thanks for playing, see you next time!</h2>
 
 <a href='/'>Start over</a>
