--- a/public/application.css
+++ b/public/application.css
@@ -8,6 +8,8 @@ form#stay {
 }
 
 img.card_image {
-  margin: 10px 10px 10px 10px;
+  margin: 5px 5px 5px 5px;
+  width: auto;
+  height: 170px;
 }
 
